# kira

./: .dockerignore  .gitignore  .infisical.json  .oxfmtrc.json  AGENTS.md  CHANGELOG.md  README.md  clippy.toml  compose.yaml  lefthook.yml  mise.toml  package.json  release-please-config.json  skills-lock.json  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: feature-implementation.yml
.github/workflows/: admin-image.yml  ci.yml  cloud-image.yml  commitlint.yml  desktop-release.yml  release-please.yml
.zed/: debug.json  settings.json
apps/admin/: .env.example  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Dockerfile  README.md  drizzle.config.ts  next.config.ts  package.json  routeTree.gen.ts  tsconfig.json  vite.config.ts
apps/cloud/: .env.example  .gitignore  .oxfmtrc.json  AGENTS.md  Dockerfile  README.md  drizzle.config.ts  package.json  routeTree.gen.ts  router.tsx  start.ts  vite.config.ts
apps/desktop/: .oxlintrc.json  AGENTS.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0002_last_opened_project.sql  0003_session_layout.sql  0004_terminal_snapshots.sql  0005_source_control_diff_panels.sql  0006_repair_terminal_panel_state.sql  0007_file_editor_panels.sql  0008_agent_thread_persistence.sql  0009_agent_thread_message_records.sql  0010_app_settings.sql  0011_agent_thread_context_usage.sql  0012_browser_panels.sql  0013_pi_jsonl_sessions.sql  0014_session_roots.sql  0015_project_kind.sql  0016_project_intentional.sql
apps/desktop/src-tauri/src/: admin_api.rs  agent_runtime.rs  browser.rs  browser_selector.rs  cloud_api.rs  desktop_signin.rs  editor.rs  explorer.rs  lib.rs  main.rs  memory.rs  org_config.rs  persistence.rs  process_ext.rs  projects.rs  search.rs  settings.rs  skills.rs  source_control.rs  terminal.rs
docs/: TODO.md  desktop-login-enrollment-plan.md  domain-language.md  guardrails-implementation-plan.md  sidecar-migration-plan.md  style-guide.md
docs/adr/: 0001-rust-owned-sqlite-persistence-store.md  0002-monorepo-hosted-admin-boundary.md  0003-organization-scoped-sso.md  0004-tauri-unstable-multiwebview-browser-panel.md  0005-admin-tanstack-start-spa.md  0006-desktop-browser-signin.md  0007-cloud-app-surface-separation.md  0008-pi-jsonl-agent-sessions.md
docs/archive/: admin-surface-separation-plan.md  admin-tanstack-start-migration-plan.md  admin-ui-refactor-plan.md  browser-panel-plan.md  desktop-login-enrollment-plan.md  skills-inspector-plan.md  source-control-gitoxide-plan.md
docs/ideas/: bun-sourced-agent-runtime.md  commit-message-generator-plan.md  commit-message-generator.md  guardrails-extension.md  memory-kira-project-integration.md  memory-viewer-plan.md  memory-viewer.md  quick-start-wizard.md  (+1 more)
patches/: @better-auth%2Fkysely-adapter@1.6.14.patch  @flue__runtime@0.9.2.patch
scripts/: tauri.ts
src/: App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
(+523 files in other folders)
