[package]
name = "kira-v3"
version = "3.0.0" # x-release-please-version
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kira_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.1"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
time = { version = "0.3.47", features = ["formatting"] }
gix = "0.84.0"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["net", "process", "sync", "time"] }
axum = "0.8"
ignore = "0.4"
regex = "1"

[profile.dev]
incremental = true
